better-helm/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: person-service
    app.kubernetes.io/part-of: person-service-chart
  name: person-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: person-service
    weight: 100
  wildcardPolicy: None
